--- a/src/index.css
+++ b/src/index.css
@@ -332,6 +332,10 @@
   padding: 20px;
   font-family: Poppins, sans-serif;
 }
+.bar-chart {
+  width: 100%;
+  height: 90%;
+}
 
 .linechart-container {
   display: flex;
